--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,5 +4,7 @@
 @import 'gerillass';
 
 @import 'shared';
+@import 'variables';
 @import 'global';
-@import 'components/simple-block';
+@import 'components/hero';
+@import 'components/button';
