--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,18 @@
 body {
+  background-color: #fff;
+  padding: 50px;
+  color: #777;
   font-style: normal;
   font-weight: 400;
+  font-size: 16px;
   font-family: 'Nunito Sans', sans-serif;
   font-optical-sizing: auto;
   font-variation-settings: 'wdth' 100;
+  letter-spacing: 2px;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0 0;
+  padding: 0 0;
 }
