--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -1,4 +1,4 @@
-/* @import '../../node_modules/normalize.css/normalize.css';
-@import '../../node_modules/breakpoint-sass/stylesheets/breakpoint'; */
+@import '../../node_modules/normalize.css/normalize.css';
+@import 'gerillass';
 
 $primary-color: #9d174d;
