new pug/sass structure

--- a/src/components/layouts/page.pug
+++ b/src/components/layouts/page.pug
@@ -2,5 +2,7 @@ doctype html
 html.no-js(lang='ru')
   include /components/service/_head
   body
-    block content
+    main.content
+      block content
+  include /components/widgets/footer
   include /components/service/_js
