--- a/src/components/widgets/hero.pug
+++ b/src/components/widgets/hero.pug
@@ -2,7 +2,7 @@ include /components/ui/button
 
 header.hero
   img.hero__logo(src="/images/logo.svg", alt="Логотип")
-  h1.hero__title Туры на воздушном шаре
+  h1.hero__title.heading_first Туры на воздушном шаре
   p.hero__subtitle Незабываемое приключение ждет вас
   +button('#')
     | Наш каталог
