--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,3 +2,8 @@ extends /components/layouts/page.pug
 
 block content
   include /components/widgets/hero
+  include /components/widgets/about
+  include /components/widgets/adventures
+  include /components/widgets/popular-toures
+  include /components/widgets/testimonials
+  include /components/widgets/reservation
