--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $brown-color-dark: #a14f03;
 $grey-color: #777777;
 $white-color: #fafafa;
 $dark-color: #000;
+$grey-dark-color: #333;
 
 $brown-black-gradient: linear-gradient(
   to right,
