--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,10 +1,9 @@
 @charset "utf-8";
 
-/* @import 'normalize.css'; */
-@import 'gerillass';
-
-@import 'shared';
-@import 'variables';
-@import 'global';
-@import 'components/hero';
-@import 'components/button';
+@use 'abstracts';
+@use 'vendors';
+// @use 'themes';
+@use 'base';
+@use 'layout';
+@use 'components';
+// @use 'pages';
