--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,6 +1,5 @@
 body {
   background-color: #fff;
-  padding: 50px;
   color: #777;
   font-style: normal;
   font-weight: 400;
@@ -15,4 +14,8 @@ body {
   box-sizing: border-box;
   margin: 0 0;
   padding: 0 0;
+}
+
+.content {
+  padding: 50px;
 }
