--- a/src/components/ui/button.pug
+++ b/src/components/ui/button.pug
@@ -2,3 +2,8 @@ mixin button(href)
   a.button(id!=attributes.id href=href)
     if block
       block 
+
+mixin button_secondary(href)
+  a.button_secondary(id!=attributes.id href=href)
+    if block
+      block 
