--- a/src/components/widgets/about.pug
+++ b/src/components/widgets/about.pug
@@ -1,10 +1,16 @@
 section.about
-  .about__title.heading_second Невероятное ощущение свободы
-  .about__columns 
-    .about__column 
-      h3 ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ
-      p Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
-      h3 ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ
-      p Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
-      +button('#')
-        | Узнать больше
+  .container
+    .about__title.heading_second.mb_large Невероятное ощущение свободы
+    .about__columns 
+      .about__column 
+        h3.heading_third ПОЗВОЛЬТЕ СЕБЕ ПРИКЛЮЧЕНИЕ
+        p Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрениям и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
+        h3.heading_third ВВЕРХ НА 6000 МЕТРОВ НАД УРОВНЕМ МОРЯ
+        p Задача организации, в особенности же дальнейшее развитие различных форм деятельности влечет за собой процесс внедрения и модернизации соответствующий условий активизации. Таким образом начало повседневной работы по формированию позиции влечет.
+        +button_secondary('#')
+          | Узнать больше
+      .about__column
+        .about__gallery
+          img.about__image(src="/images/photo-1.jpg", alt="photo-1")
+          img.about__image(src="/images/photo-2.png", alt="photo-2")
+          img.about__image(src="/images/photo-3.png", alt="photo-3")
