--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,7 @@
 @use 'vendors';
 // @use 'themes';
 @use 'base';
+@use 'utils';
 @use 'layout';
 @use 'components';
-// @use 'pages';
+@use 'pages';
