--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -1,15 +1,31 @@
 @keyframes leftToRight {
   0% {
-    transform: translateX(-80px);
+    transform: translateX(-8rem);
     opacity: 0;
   }
 
   80% {
-    transform: translateX(20px);
+    transform: translateX(2rem);
   }
 
   100% {
-    transform: translateX(0px);
+    transform: translateX(0rem);
+    opacity: 1;
+  }
+}
+
+@keyframes rightToLeft {
+  0% {
+    transform: translateX(8rem);
+    opacity: 0;
+  }
+
+  80% {
+    transform: translateX(-2rem);
+  }
+
+  100% {
+    transform: translateX(0rem);
     opacity: 1;
   }
 }
