--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,13 +1,5 @@
-body {
-  background-color: #fff;
-  color: #777;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  font-family: 'Nunito Sans', sans-serif;
-  font-optical-sizing: auto;
-  font-variation-settings: 'wdth' 100;
-  letter-spacing: 2px;
+html {
+  font-size: 62.5%;
 }
 
 * {
@@ -17,5 +9,5 @@ body {
 }
 
 .content {
-  padding: 50px;
+  padding: 5rem;
 }
