--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -5,16 +5,49 @@
   justify-content: center;
   align-items: center;
   transition: transform 0.3s cubic-bezier(0.19, 1, 0.22, 1);
-  border-radius: 50px;
+  border-radius: 5rem;
   background: $white-color;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   color: $grey-color;
   font-weight: 600;
-  font-size: 20px;
-  letter-spacing: 5px;
+  font-size: 2rem;
+  letter-spacing: 0.5rem;
   text-decoration: unset;
   text-transform: uppercase;
   &:active {
     transform: scale(1.03);
+  }
+
+  &_secondary {
+    @extend .button;
+    position: relative;
+    border-radius: 0;
+    background-color: transparent;
+    padding: 1rem 0.8rem;
+    font-size: 1.6rem;
+    letter-spacing: 0.2rem;
+    text-transform: unset;
+
+    &:hover {
+      color: $white-color;
+      &::before {
+        height: 100%;
+      }
+    }
+
+    &::before {
+      position: absolute;
+      bottom: 0;
+      z-index: -1;
+      transition: all 0.3s ease;
+      background: $brown-color-light;
+      width: 100%;
+      height: 0.1rem;
+      content: '';
+    }
+
+    &::after {
+      content: '→';
+    }
   }
 }
