--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/variables' as *;
+@use '../vendors/gls' as gls;
 
 .hero {
   display: flex;
@@ -15,22 +16,22 @@
 
   &__title {
     animation: leftToRight 1s ease-in;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
   }
 
   &__subtitle {
-    margin-bottom: 50px;
+    animation: rightToLeft 1s ease-in;
+    margin-bottom: 5rem;
     font-weight: 300;
-    font-size: 40px;
-    letter-spacing: 5px;
+    font-size: 4rem;
+    letter-spacing: 0.5rem;
     text-transform: lowercase;
   }
 
   &__logo {
     position: absolute;
-    top: 50px;
-    left: 50px;
-    width: 56px;
-    height: 70px;
+    top: 5rem;
+    left: 5rem;
+    @include gls.sizer(5.6rem, 7rem);
   }
 }
