--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -5,12 +5,12 @@
   flex-direction: column;
   align-items: center;
   background: $grey-dark-color;
-  padding: 80px 50px;
+  padding: 8rem 5rem;
 
   &__logo {
-    margin-bottom: 50px;
-    width: 120px;
-    height: 150px;
+    margin-bottom: 5rem;
+    width: 12rem;
+    height: 15rem;
   }
 
   &__menu {
@@ -18,7 +18,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 5rem;
     list-style: none;
 
     a {
