--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -33,12 +33,13 @@ p {
 
   &_third {
     margin-bottom: 1rem;
-    font-style: 2rem;
     font-weight: 700;
+    font-size: 2rem;
   }
 
   &_fourth {
-    font-style: 2.8rem;
     font-weight: 300;
+    font-size: 2.8rem;
+    text-transform: uppercase;
   }
 }
