--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -5,7 +5,7 @@
   padding: 8rem 0;
 
   &__title {
-    text-shadow: 0 0.4rem 0.4rem rgba($dark-color, 25%);
+    text-shadow: 0 0.4rem 0.4rem rgba($clr-black, 25%);
   }
 
   &__columns {
@@ -39,7 +39,7 @@
     &:hover {
       transform: scale(1.05);
       z-index: 10;
-      outline: solid 1rem $brown-color-light;
+      outline: solid 1rem $clr-lightbrown;
       outline-offset: 1rem;
     }
   }
