--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,9 +6,9 @@
   align-items: center;
   transition: transform 0.3s cubic-bezier(0.19, 1, 0.22, 1);
   border-radius: 5rem;
-  background: $white-color;
+  background: $clr-white;
   padding: 1.5rem 4rem;
-  color: $grey-color;
+  color: $clr-gray;
   font-weight: 600;
   font-size: 2rem;
   letter-spacing: 0.5rem;
@@ -29,7 +29,7 @@
     text-transform: unset;
 
     &:hover {
-      color: $white-color;
+      color: $clr-white;
       &::before {
         height: 100%;
       }
@@ -40,7 +40,7 @@
       bottom: 0;
       z-index: -1;
       transition: all 0.3s ease;
-      background: $brown-color-light;
+      background: $clr-lightbrown;
       width: 100%;
       height: 0.1rem;
       content: '';
